--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Login</title>
   </head>
   <body>
-
+    <h1>Login</h1>
+    <form action='/auth'>
+      Username:
+      <br>
+      <input type="text" name="username">
+      <br>
+      Password:
+      <br>
+      <input type="password" name="password">
+      <br>
+      <input type="submit" value="Login">
+    </form>
   </body>
 </html>
