Update with plain html for login and signup

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,5 +17,8 @@
       <br>
       <input type="submit" value="Login">
     </form>
+    <form action='/signup'>
+      <input type="submit" value="Create an account">
+    </form>
   </body>
 </html>
