--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form action='/auth'>
-      Username:
-      <br>
-      <input type="text" name="username">
-      <br>
-      Password:
-      <br>
-      <input type="password" name="password">
-      <br>
-      <input type="submit" value="Login">
-    </form>
-    <form action='/signup'>
-      <input type="submit" value="Create an account">
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<h1>Login</h1>
+<form action='/auth'>
+  Username:
+  <br>
+  <input type="text" name="username">
+  <br>
+  Password:
+  <br>
+  <input type="password" name="password">
+  <br>
+  <input type="submit" value="Login">
+</form>
+<form action='/signup'>
+  <input type="submit" value="Create an account">
+</form>
+{% endblock content %}
