--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
+{% block head %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
-    {% block styling %}
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
     <!-- Compressed JavaScript -->
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../static/css/stylesheet.css">
     <!-- Custom Font -->
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
-    {% endblock %}
   </head>
+  {% endblock %}
   <body>
     {% block flashes %}
         {% with messages = get_flashed_messages(with_categories = true) %}
