--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -46,6 +46,7 @@ h3 {
   color: fuchsia;
   margin: auto;
   font-family: 'Overpass', sans-serif;
+  text-align: center;
 }
 h4 {
   color: fuchsia;
@@ -61,6 +62,25 @@ h5 {
 img {
   margin-left: auto;
   margin-right: auto;
+}
+label {
+  color: fuchsia;
+}
+.formBorder {
+  padding: 50px;
+  border-radius: 50px;
+  border-style: inset;
+  border-color: fuchsia;
+}
+
+.textInput {
+  border-radius: 15px;
+  background-color: black;
+  border-color: fuchsia;
+  color: white;
+}
+.textInput:active {
+  background-color: black;
 }
 /* #thumbnail-container {
   padding: auto;
