Move index.html and fix welcome page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,65 @@
-{% extends "base.html" %}
-
-{% block content %}
-<p>Welcome</p>
-{% endblock content %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Welcome to QAFFLE</title>
+    <!-- Compressed CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
+    <!-- Compressed JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"></script>
+    <!-- Our own StyleSheet -->
+    <link rel="stylesheet" href="../static/css/stylesheet.css">
+    <!-- Custom Font -->
+    <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-bar grid-x">
+      <div class="top-bar-left grid-x">
+        <h3 class="columns small-1">QAFFLE</h3>
+        <span class="columns small-11"></span>
+      </div>
+      <div class="top-bar-right small-2 ">
+        <div class="button-group grid-x">
+          <a class="button small-5"href="/login">Login</a>
+          <div class="small-1"></div>
+          <a class="button small-5"href="/signup">Sign Up</a>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="grid-x">
+    <h1 class="columns small-12">Welcome to QAFFLE</h1>
+  </div>
+  <br>
+  <br>
+  <div class="grid-x">
+    <!-- <div class="row"> -->
+      <!-- <div class="columns small-10 small-centered"> -->
+        <img class="thumbnail columns small-8 small-centered" src="../static/images/crew.jpeg" alt="the squadfam">
+      <!-- </div> -->
+    <!-- </div> -->
+  </div>
+  <br>
+  <br>
+  <div class="grid-x">
+    <h5 class="columns small-12">A new QAF for a new age...</h5>
+  </div>
+  <br>
+  <br>
+  <div class="grid-x">
+    <p class="columns small-8 small-offset-2">The QAFFLE is the next generation solution to the old and bland QAF. Similar in premise, the QAFFLE allows users to create posts and comment at its most basic level. The frontend will be sleek and sexy. The backend will be snappy and robust. We will be implementing features not offered in the original QAF to enhance the user experience. Welcome to the new age. Welcome to QAFFLE.</p>
+  </div>
+  <br>
+  <div class="grid-x">
+    <div class="columns small-8 small-offset-2 ">
+      <a class="expanded button" href="/login"><h5>Come join us...</h5></a>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  </body>
+</html>
