added current user variable when rendering template

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
   </head>
   <body>
-    {% block flashes %}
+    <!-- {% block flashes %}
         {% with messages = get_flashed_messages(with_categories = true) %}
             {% if messages %}
             <br>
@@ -24,7 +24,7 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-    {% endblock flashes %}
+    {% endblock flashes %} -->
 
     {% block content %}
     {% endblock content %}
