Add basic buttons to homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-Hello
+<div class="grid-x">
+  <a class="button" href="/logout">Logout</a>
+  <a class="button" href="/settings">Settings</a>
+  <a class="button" href="/qaf">QAF</a>
+  <a class="button" href="/shop">Shop</a>
+</div>
 {% endblock content%}
