Add basic settings.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,3 +7,10 @@
   <a class="button" href="/shop">Shop</a>
 </div>
 {% endblock content%}
+
+<script type="text/javascript">
+  var db = sqllite3.Database('./qaffle_data.db');
+
+  
+
+</script>
