now shows qafs created on home page and made template for each qaf

--- a/templates/create_qaf.html
+++ b/templates/create_qaf.html
@@ -2,7 +2,7 @@
 {% block content %}
 <br>
 <form class="form-group" method="post">
-  <input name = "title" type="text" placeholder='Name'>
+  <input name = "name" type="text" placeholder='Name'>
   <br>
   <input type="submit" value="Submit">
 </form>
