clean up settings.html and add routing to that page

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
     <!-- Compressed JavaScript -->
