Clean up settings page

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-THis isthe shop1!
+<div class="grid-x">
+  <br>
+  <br>
+  <h1 class="row small-12">The Michael Zhang Collection</h1>
+  <br>
+  <h5 class="row small-12"><i>the exquisite PM style, only at the qaffle store</i></h5>
+  <br>
+  <br>
+  <div class="formBorder small-12 grid-x">
+    <div class="formBorder small-5">
+
+    </div>
+    <div class="formBorder small-5 small-offset-2">
+
+    </div>
+  </div>
+</div>
 {% endblock content%}
