--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
   <a class="button" href="/settings">Settings</a>
   <a class="button" href="/qaf">QAF</a>
   <a class="button" href="/shop">Shop</a>
+  <a class="button" href="/create_qaf">Create Qaf</a>
 </div>
 
 <br>
