--- a/templates/settings.html
+++ b/templates/settings.html
@@ -7,7 +7,17 @@
 <br><br>
 <div class="grid-x">
   <div class="formBorder small-8 small-offset-2">
-    <form class="grid-x" action="/updateSettings(or something)" method="post">
+    <form class="grid-x" action="/settings" method="POST">
+          {% with messages = get_flashed_messages(with_categories = true) %}
+        {% if messages %}
+        <br>
+            {% for category, message in messages %}
+                <div class="callout alert">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
       <br>
       <h5>Enter Your Previous Password:</h5>
       <input class="row" type="text" name="oldpass" value="">
