update with navbars on every page

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -82,6 +82,12 @@ label {
 .textInput:active {
   background-color: black;
 }
+.top-bar {
+  z-index: 0;
+}
+.callout.alert {
+  z-index: 1;
+}
 /* #thumbnail-container {
   padding: auto;
 } */
