--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,27 @@
     <link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
   </head>
   <body>
-
+    <div class="top-bar grid-x">
+      <div class="top-bar-left grid-x">
+        <a href="/"><h3 class="columns small-1">QAFFLE</h3></a>
+        <span class="columns small-11"></span>
+      </div>
+      <div class="top-bar-right small-2 ">
+        {% if current_user is none %}
+        <div class="button-group grid-x">
+          <a class="button small-5"href="/login">Login</a>
+          <div class="small-1"></div>
+          <a class="button small-5"href="/signup">Sign Up</a>
+        {% else %}
+          Currently logged in as: {{ current_user.username }}
+        {% endif %}
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
     {% block content %}
     {% endblock content %}
   </body>
