can now create posts for qafs

--- a/templates/qaf.html
+++ b/templates/qaf.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h2>{{ qaf.name }}</h2>
     <br>
+    <a class="button" href="/qaf/{{qaf.id}}/create_post">Create Post</a><br>
     {% for post in posts %}
         {{post.content}}
         <br>
