--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
+{% with messages = get_flashed_messages(with_categories = true) %}
+      {% if messages %}
+      <br>
+          {% for category, message in messages %}
+              <div class="callout alert">
+                  {{message}}
+              </div>
+          {% endfor %}
+      {% endif %}
+  {% endwith %}
 <div class="grid-x">
   <div class="formBorder small-12">
     <h3>Discover Your New QAF:</h3>
@@ -8,17 +18,6 @@
   <br>
   <br>
   <br>
-
-            {% with messages = get_flashed_messages(with_categories = true) %}
-        {% if messages %}
-        <br>
-            {% for category, message in messages %}
-                <div class="callout alert">
-                    {{message}}
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
   <div class="small-4 small-offset-4 grid-x">
     <a class="expanded button row" href="/settings">Settings</a>
     <a class="expanded button row" href="/qaf">QAF</a>
@@ -42,8 +41,11 @@
 
   console.log("yah yeet");
   document.getElementById('qafsearch').addEventListener('input', function functionName() {
-    var transaction = db.transaction([], "readonly")
-    console.log("yah yeet");
+    $.getJSON('/qafSearch', {input: document.getElementById('qafsearch').value,}, function(data) {
+          console.log("yah yeet");
+          console.log(data.result);
+				  // $("#result").text(data.result);
+				});
   });
 
 
