--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,5 +1,3 @@
-html {
-}
 body {
   font-family: 'Overpass', sans-serif;
   background-color: RGB(15, 15, 15);
@@ -79,8 +77,13 @@ label {
   border-color: fuchsia;
   color: white;
 }
-.textInput:active {
+input[type=text]:focus, input[type=password]:focus {
   background-color: black;
+  color:white;
+}
+
+input[type=text]:focus::placeholder{
+  color:transparent;
 }
 .top-bar {
   z-index: 0;
