--- a/templates/home.html
+++ b/templates/home.html
@@ -13,29 +13,19 @@
 <div class="grid-x">
   <div class="formBorder small-12">
     <h3>Discover Your New QAF:</h3>
-    <input class="textInput" type="text" id="qafsearch" name="search" value="Search">
+    <input class="textInput" type="text" id="qafsearch" name="search" placeholder="Search">
   </div>
   <br>
   <br>
   <br>
   <div class="small-4 small-offset-4 grid-x">
     <a class="expanded button row" href="/settings">Settings</a>
-    <a class="expanded button row" href="/qaf">QAF</a>
+    <a class="expanded button row" href="/my_qafs">QAFS</a>
     <a class="expanded button row" href="/shop">Shop</a>
     <a class="expanded button row" href="/create_qaf">Create Qaf</a>
     <a class="expanded button row" href="/logout">Logout</a>
   </div>
 </div>
-
-<br>
-
-<ul>
-  {%  for qaf in qaf_list %}
-      <li>
-          <a href="{{ url_for('show_qaf', id=qaf.id) }}">{{ qaf.name }}</a>
-      </li>
-  {%  endfor %}
-</ul>
 
 <script type="text/javascript">
 
