--- a/templates/qaf.html
+++ b/templates/qaf.html
@@ -5,7 +5,10 @@
     <br>
     <a class="button" href="/qaf/{{qaf.id}}/create_post">Create Post</a><br>
     {% for post in posts %}
-        {{post.content}}
-        <br>
+        <ul>
+            <li>
+                <a href="{{ url_for('show_post', qaf_id = qaf.id, post_id=post.id) }}"> {{post.content}} </a>
+            </li>
+        </ul>
     {% endfor %}
 {% endblock content %}
