--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 <div class="grid-x">
   <div class="formBorder small-12">
     <h3>Discover Your New QAF:</h3>
-    <input class="textInput" type="text" id="qafsearch" name="search" value="Search">
+    <input class="textInput" type="text" id="qafsearch" name="search" placeholder="Search">
     <div id="searchResults" class="small-12">
 
     </div>
