--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -3,6 +3,14 @@ body {
   background-color: RGB(15, 15, 15);
   color: fuchsia;
 }
+.menu {
+  background: $foundation-5-top-bar-bg;
+
+  a {
+    color: $foundation-5-top-bar-text-color;
+  }
+}
+
 a {
   border: 0px;
 
