added stuff to nav bar

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -5,6 +5,7 @@
   <form class="form-group" method="post">
     <input type="submit" value="Submit">
     <input name = "title" type="text" placeholder='Title'>
+    <input name = "tags" type="text" placeholder='Tags'>
     <br>
     <input name = "content" type="text" >
   </form>
