--- a/templates/base.html
+++ b/templates/base.html
@@ -18,18 +18,25 @@
     <div class="top-bar grid-x">
       <div class="top-bar-left grid-x">
         <a href="/"><h3 class="columns small-1">QAFFLE</h3></a>
+        <ul class = "menu" style = "margin-left:25px;background-color:black;">
+          <li><a class = "button" style="background-color:black;" href="/my_qafs">QAFS</a></li>
+          <li><a class = "button" style="background-color:black;" href="/shop">Shop</a></li>
+          <li><a class = "button" style="background-color:black;" href="/create_qaf">Create QAF</a></li>
+        </ul>
         <span class="columns small-11"></span>
       </div>
-      <div class="top-bar-right small-2 ">
+      <div class="top-bar-right small-2">
         {% if current_user is none %}
         <div class="button-group grid-x">
-          <a class="button small-5"href="/login">Login</a>
+          <a class="button small-5" href="/login">Login</a>
           <div class="small-1"></div>
           <a class="button small-5"href="/signup">Sign Up</a>
-          {% else %}
-            <div style = "text-align:right;margin-left:20px">Currently logged in as: {{ current_user.username }}</div>
+        </div>
+        {% else %}
+          <ul class = "menu" style = "background-color:black;margin-left:200px">
+            <li><a class="button small-5" href="/logout">Logout</a></li>
+          </ul>
         {% endif %}
-      </div>
       </div>
     </div>
     <br>
