--- a/templates/post.html
+++ b/templates/post.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h2>{{ post.title }}</h2>
+Tags: 
+{% for tag in post.tags %}
+    {{tag}}
+{% endfor %} <br>
 {{ post.content }}
 <br>
 <br>
