--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<a class="button" href="">Edit Post</a>
 <h2>{{ post.title }}</h2>
 Tags: 
 {% for tag in post.tags %}
