--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -37,7 +37,7 @@ li {
   text-align: center;
 }
 h1 {
-  color: navy);
+  color: navy;
   margin: auto;
   font-family: 'Overpass', sans-serif;
   text-align: center;
