--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
     <div class="top-bar grid-x">
       <div class="top-bar-left grid-x">
         <a href="/"><h3 class="columns small-1">QAFFLE</h3></a>
-        <ul class = "menu" style = "margin-left:25px;background-color:black;">
-          <li><a class = "button" style="background-color:black;" href="/my_qafs">QAFS</a></li>
-          <li><a class = "button" style="background-color:black;" href="/shop">Shop</a></li>
-          <li><a class = "button" style="background-color:black;" href="/create_qaf">Create QAF</a></li>
+        <ul class = "menu" style = "margin-left:25px;background-color:rgb(224, 173, 104)">
+          <li><a class = "button" style="background-color:rgb(224, 173, 104)" href="/my_qafs">QAFS</a></li>
+          <li><a class = "button" style="background-color:rgb(224, 173, 104)" href="/shop">Shop</a></li>
+          <li><a class = "button" style="background-color:rgb(224, 173, 104)" href="/create_qaf">Create QAF</a></li>
         </ul>
         <span class="columns small-11"></span>
       </div>
@@ -33,7 +33,7 @@
           <a class="button small-5"href="/signup">Sign Up</a>
         </div>
         {% else %}
-          <ul class = "menu" style = "background-color:black;margin-left:200px">
+          <ul class = "menu" style = "background-color:rgb(224, 173, 104);margin-left:200px">
             <li><a class="button small-5" href="/logout">Logout</a></li>
           </ul>
         {% endif %}
