fixed bug with qafs joined

--- a/templates/post.html
+++ b/templates/post.html
@@ -22,8 +22,7 @@
   </div>
   {% for comment in comments %}
   <div class="post small-10 small-offset-1">
-    <div style="word-wrap: break-word;">"{{comment.content}}" - {{comment.author}}</div>
-    <div style="float:right;margin-right:50px">{{comment.time_created}}</div>
+    <div style="word-wrap: break-word;">"{{comment.content}}" - {{comment.author}} <div style="float:right;margin-right:50px">{{comment.time_created}}</div> </div>
   </div>
   <div class="small-12">
     <br>
