--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -80,6 +80,10 @@ label {
   background-color: RGB(224, 173, 104);
 }
 
+.tag {
+  background-color: RGB(209, 143, 46);
+}
+
 .textInput {
   border-radius: 15px;
   background-color: white;
