--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
           <a class="button small-5"href="/signup">Sign Up</a>
         </div>
         {% else %}
-          <ul class = "menu" style = "background-color:rgb(224, 173, 104);margin-left:200px">
-            <li><a class="button small-5" href="/logout">Logout</a></li>
+          <ul class = "menu" style = "background-color:rgb(224, 173, 104);margin-left:60%">
+            <li><a class="button small-5" href="/logout" >Logout</a></li>
           </ul>
         {% endif %}
       </div>
