--- a/templates/qaf.html
+++ b/templates/qaf.html
@@ -12,6 +12,11 @@
     {% for post in posts %}
       <div class="post">
         <h5>{{post.title}}</h5>
+        <div class="small-12" style="text-align:center">Tags:
+          {% for tag in post.tags %}
+            <span class = "tag">{{ tag }}</span>
+          {% endfor %}
+        </div>
         <div class="post-desc">
           <p>{{post.content}}</p>
         </div>
