changed front end a little

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -43,7 +43,7 @@ h1 {
   text-align: center;
 }
 h2 {
-  color: navy);
+  color: navy;
   margin: auto;
   font-family: 'Overpass', sans-serif;
   text-align: center;
