some typos in comment.py

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -80,6 +80,10 @@ label {
   background-color: RGB(224, 173, 104);
 }
 
+.navbar{
+  background-color:rgb(224, 173, 104);
+}
+
 .tag {
   background-color: RGB(209, 143, 46);
 }
