--- a/templates/qaf.html
+++ b/templates/qaf.html
@@ -10,23 +10,26 @@
     <br>
     <br>
     {% for post in posts %}
-      <div class="post">
+      <div class="post grid-x">
         <h5 style="text-align:left">{{post.title}}</h5>
         <div class="small-12" style="text-align:left">Tags:
           {% for tag in post.tags %}
             <span class = "tag">{{ tag }}</span>
           {% endfor %}
         </div>
-        <div>By <strong>{{post.get_author().username}}</strong> <span style="float:right;">{{post.time_created}}</span> </div><br>
-        <div style="word-wrap: break-word;">
+        <div class="small-12">By <strong>{{post.get_author().username}}</strong> <span style="float:right;">{{post.time_created}}</span> </div><br>
+        <div class="small-12" style="word-wrap: break-word;">
           {{post.content}}
         </div>
         <br>
-        <div class="small-5">
-          <h4 class="upvote" id="upvote{{post.id}}">⬆️</h4>
+        <div class="small-4 upvote" id="{{post.id}}">
+          <h4 class="upvote" id="{{post.id}}">⬆️</h4>
         </div>
-        <div class="small-5 small-offset-2">
-          <h4 class="downvote">⬇️</h4>
+        <div class="small-4 downvote" id="{{post.id}}">
+          <h4 class="downvote" id="{{post.id}}">⬇️</h4>
+        </div>
+        <div class="small-4">
+          <h4 class="votes" id="{{post.id}}">{{post.net_vote}}</h4>
         </div>
         <a class="button expanded small-12" href="{{ url_for('show_post', qaf_id = qaf.id, post_id=post.id) }}"> Continue the Discussion </a>
       </div>
@@ -35,15 +38,20 @@
   </div>
 </div>
 <script type="text/javascript">
-  document.getElementById("upvote").addEventListener("click", function fun() {
-    $.getJSON('/upvote', {input: document.getElementById('upvote').value,}, function(data) {
-          console.log(data.result.length);
-          document.getElementById('searchResults').innerHTML = "";
-          for (var x = 0; x < data.result.length; x++) {
-            console.log(data.result[x]);
-            document.getElementById('searchResults').innerHTML += '<a class=\"expanded button\" href=\"/qaf/'+data.result[x][0]+'\">'+data.result[x][1]+'</a>';
-          }
+  var upvotes = Array.from(document.getElementsByClassName("upvote"));
+  var downvotes = Array.from(document.getElementsByClassName("downvote"));
+  document.getElementsByTagName('body')[0].addEventListener('click', event => {
+    console.log(event.target);
+    if (upvotes.includes(event.target)) {
+      $.getJSON('/upvotePost', {input: event.target.id}, function(data) {
+          document.getElementsByClassName("votes").namedItem(event.target.id).innerText = 1 + Number(document.getElementsByClassName("votes").namedItem(event.target.id).innerText);
         });
+    }
+    if (downvotes.includes(event.target)) {
+      $.getJSON('/downvotePost', {input: event.target.id}, function(data) {
+          document.getElementsByClassName("votes").namedItem(event.target.id).innerText = Number(document.getElementsByClassName("votes").namedItem(event.target.id).innerText) - 1;
+        });
+    }
   });
 </script>
 {% endblock content %}
